接口调整